--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "css-loader": "^0.28.7",
+        "intersection-observer": "^0.4.2",
         "normalize.css": "^7.0.0"
     }
 }
